# btcpredict-kalshi

./: .gitignore  Cargo.toml  requirements.txt  start_all.bat
dashboard/backend/: main.py
dashboard/frontend/: index.html
discovery/: discovery.md
discovery/crypto/: __init__.py  crypto.py  filter.py
discovery/helper/: client.py  discovery.py
discovery/leaderboard/: leaderboard_crawler.py
discovery/series_events/: series_events_discovery.py  series_list.xlsx
discovery/sports/: filter.py  sports.py
discovery/top_traded_markets/: top_traded_markets.py
src/: calculator.rs  fair_value.rs  lib.rs  main.rs  market_maker.rs  redis_client.rs  trading_apis.rs
src/auth/: binance.rs  coinbase.rs  cryptocom.rs  kalshi.rs  kraken.rs  mod.rs
src/types/: binance.rs  coinbase.rs  crypto_aggregator.rs  cryptocom.rs  kalshi.rs  kraken.rs  messages.rs  mod.rs
src/websockets/: crypto_aggregator.rs  kalshi_fills.rs  kalshi_monitor.rs  mod.rs
