[package]
name = "kalshi_monitor"
version = "0.1.0"
edition = "2021"
default-run = "kalshi_monitor"

[lib]
name = "kalshi_monitor"
path = "src/lib.rs"

[[bin]]
name = "kalshi_monitor"
path = "src/main.rs"

[[bin]]
name = "test_kalshi_monitor"
path = "src/bin/test_kalshi_monitor.rs"

[[bin]]
name = "test_trading_api"
path = "src/bin/test_trading_api.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Kalshi auth (RSA-PSS)
rsa = { version = "0.9", features = ["sha2"] }
pkcs1 = "0.7"
base64 = "0.22"
rand = "0.8"

# Odds API auth (HMAC-SHA256)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

# CSV parsing
csv = "1.3"

# Common
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "aio"] }
